
	Enhancements:
	----------------------------
	+ Added French translation (Denis Darré);
	+ Added error catching/displaying for ajax-loaded php scripts;
	+ Added default language for login/requests display and new users;
	+ Added direct links to different pages in IP address table;
	+ Subnets can now be edited directly from nested subnets list;

	Bugfixes:
	----------------------------

== 0.8

	New features:
	----------------------------	
	+ New group and permission management;
	+ Support for translations;
	+ Subnet resizing;
	+ Subnet splitting into smaller subnets;
	+ Added free space display for nested subnets;
	+ Added visual display of subnet usage per IP address;
	+ Added truncate network option that deletes all IP addresses in subnet;
	+ Added button the updates subnet with RIPE information;
	
	Enhancements:
	----------------------------
	+ Added add nested subnet under subnet details to simplify master subnet selection in hierarchy;
	+ Added edit subnet link from search results;
	+ Added reverse IPv6 DNS entries to IPCalc (Vincent Boisard);
	+ Added option for plain-text emails;
	+ Added ckEditor to write instructions;
	+ StrictMode is not set globally anymore but set per section;
	+ Added custom user fields;
	+ Added option to verify that hostname is unique;
	+ Improved MySQL exception handling;
	+ Added mod_rewrite error detection on installation and upgrade;
	+ Added hostname validation;
	+ Added Hostfile dump of IP addresses;
	+ Search also searches in custom fields;
	+ jQuery updated to v 1.9.1;

	Bugfixes:
	------------------------
	+ Fixed overlay on second popup;
	+ Fixed IE search bug;
	+ Fixed support for non-standard ports;
	+ Fixed permitting overlapping subnets if vrfs are different;
	+ Fixed dates in logging appearing in 12h format;
	+ Fixed broken subnets link in tools > subnets if installation is not at document root;
	+ Fixed error when adding new subnet if checkboxes are not selected in newer MySQL servers;