@@ -12,6 +12,7 @@
 	+ Added default language for login/requests display and new users;
 	+ Added direct links to different pages in IP address table;
 	+ Subnets can now be edited directly from nested subnets list;
+	+ When adding nested subnets default vlan/vrf is selected from parent;
 
 	Bugfixes:
 	----------------------------
